--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ChiselGuide"]
-	path = ./ChiselGuide
-	url = https://github.com/samadpls/CHISEL-Projects.git
+	path = ./chisel-bootcamp
+	url = https://github.com/freechipsproject/chisel-bootcamp.git
