--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ChiselGuide"]
-	path = ./chisel-bootcamp
+[submodule "chisel-bootcamp"]
+	path = chisel-bootcamp
 	url = https://github.com/freechipsproject/chisel-bootcamp.git
